--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1><center>Calculate The Circumference Or Area Of A Circle Or A Square</center></h1>
+    <h1><center><u>Calculate The Circumference Or Area Of A Circle Or A Square</u></center></h1>
     <div>
       <br>
-      <p>Enter the radius of your circle:</p>
+      <p><u>Enter the radius of your circle:</u></p>
       <br>
       <img src="Circle.jpg" alt="area of circle">
       <br>
@@ -25,15 +25,14 @@
     </div>
     <div class="text">
       <br>
-      <p>Enter a side of your square</p>
+      <p><u>Enter a side of your square</u></p>
       <br>
       <img src="Square.png" alt="area of square">
       <br>
-      <p id="area_status"></p>
-      <label>Side Length= </label>
-      <input id="side" type="text" class="form-control" placeholder="SIDE LENGTH" /><br>
+      <p id="area-status"></p>
+      <input id="side" type="text" class="form-control" placeholder="SIDE LENGTH"/>
       <p><button onclick="areaofsquare()" class="btn">calculate</button></p>
-      <br>   
+      <br>
     </div>
     <script src="script.js"></script>
   </body>
