--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <br>
       <p><u>Enter the radius of your circle:</u></p>
       <br>
-      <img src="Circle.jpg" alt="area of circle">
+      <img src="circle.jpg" alt="area of circle">
       <br>
       <input type="text" id="number" placeholder="Area Or Circumference">
       <button id="area">area</button>
@@ -23,17 +23,19 @@
       <p>A = <b id="area-answer">pi(radius/2)*2</b></p>
       <p>C = <b id="circumference-answer">pi(radius</b></p>
     </div>
+    <div>
+      <br>
+      <p><u>Enter a side of your square:</u></p>
+      <br>
+      <img src="square.png" alt="area of square">
+      <br>
+      <input type="text" id="squarenumber" placeholder="Side of a square">
+      <button id="area1">area</button>
+    </div>
     <div class="text">
       <br>
-      <p><u>Enter a side of your square</u></p>
-      <br>
-      <img src="Square.png" alt="area of square">
-      <br>
-      <p id="area-status"></p>
-      <input id="side" type="text" class="form-control" placeholder="SIDE LENGTH"/>
-      <p><button onclick="areaofsquare()" class="btn">calculate</button></p>
-      <br>
-    </div>
+      <p>A = <b id="area1-answer">side*side</b></p>
+      </div>
     <script src="script.js"></script>
   </body>
 </html>
