--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
       <br>
       <p>A = <b id="area1-answer">side*side</b></p>
       </div>
+      <div>
+      <br>
+      <p><u>Enter the base and height of your triangle:</u></p>
+      <br>
+      <img src="triangle.png" alt="area of triangle">
+      <br>
+      <input type="text" id="trianglebase" placeholder="base of triangle">
+      <input type="text" id="triangleheight" placeholder="height of triangle">
+      <button id="area2">area</button>
+    </div>
+    <div class="text">
+      <br>
+      <p>A = <b id="area2-answer">(base*height)/2</b></p>
+      </div>
     <script src="script.js"></script>
   </body>
 </html>
