--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1><center><u>Calculate The Circumference Or Area Of A Circle Or A Square</u></center></h1>
+    <h1><center><u>Calculate The Circumference Or Area Of A Circle, Square or a Triangle</u></center></h1>
     <div>
       <br>
       <p><u>Enter the radius of your circle:</u></p>
